fixed CSS of the dashboard

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -64,7 +64,7 @@
               src="/images/profile-ava.jpg"
               alt="Profile Picture"
               width="50px"
-              class="avatarNavbar"
+              class="avatarProfile"
             />
             <h4>Dang Khoa</h4>
           </div>
@@ -74,7 +74,7 @@
                 src="/images/profile-ava.jpg"
                 alt="Profile Picture"
                 width="65px"
-                class="avatarWelcome"
+                class="avatarProfile"
               />
               <div class="welcome-text">
                 <p>Hi there,</p>
@@ -96,9 +96,15 @@
                 <div class="card">
                   <h6>Super Cool Projects</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -106,10 +112,17 @@
                   </div>
                 </div>
                 <div class="card">
+                  <h6>Less Cool Projects</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -117,10 +130,17 @@
                   </div>
                 </div>
                 <div class="card">
+                  <h6>Impossible Apps</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -130,10 +150,17 @@
               </div>
               <div class="cards-right">
                 <div class="card">
+                  <h6>Easy Peasy App</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -141,10 +168,17 @@
                   </div>
                 </div>
                 <div class="card">
+                  <h6>Ad Blocker</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -152,10 +186,17 @@
                   </div>
                 </div>
                 <div class="card">
+                  <h6>Money Maker</h6>
                   <p>Lores Imsum</p>
-                  <div class="icons">
-                    <img src="/icons/star-plus-outline.svg" alt="Star-icon" />
-                    <img src="/icons/eye-plus-outline.svg" alt="Eyes-icon" />
+                  <div class="card-icons">
+                    <img
+                      src="/icons/star-plus-outline.svg"
+                      alt="Star-icon"
+                    />
+                    <img
+                      src="/icons/eye-plus-outline.svg"
+                      alt="Eyes-icon"
+                    />
                     <img
                       src="/icons/share-variant-outline.svg"
                       alt="Share-icon"
@@ -173,14 +214,17 @@
                   <h6>Site Maintainance</h6>
                   <p>
                     This website are being constructed! Please wait until the
-                    next update!
+                    next update!This website are being constructed! Please wait
+                    until the next update!
                   </p>
                 </div>
                 <div class="divider"></div>
                 <div class="ann-text">
                   <h6>Community Share Day</h6>
                   <p>
-                    This week we will have celebrate a great day of my country
+                    This week we will have celebrate a great day of my
+                    country,This week we will have celebrate a great day of my
+                    country
                   </p>
                 </div>
                 <div class="divider"></div>
@@ -188,7 +232,8 @@
                   <h6>Updated Privacy Policy</h6>
                   <p>
                     Your policy will be upgraded more secure and unabled to
-                    touch !
+                    touch !Your policy will be upgraded more secure and unabled
+                    to touch !
                   </p>
                 </div>
               </div>
