--- a/dashboard-project/dashboard.html
+++ b/dashboard-project/dashboard.html
@@ -10,46 +10,46 @@
     <div class="grid">
       <div class="sidebar">
         <div class="logo-text">
-          <img src="/icons/view-dashboard.svg" alt="Dashboard" />
+          <img src="/dashboard-project/icons/view-dashboard.svg" alt="Dashboard" />
           <h1>Dashboard</h1>
         </div>
         <div class="list-items">
           <div class="icon-text">
-            <img src="/icons/home.svg" alt="Home" />
+            <img src="/dashboard-project/icons/home.svg" alt="Home" />
             <p><strong>Home</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/account.svg" alt="Profile" />
+            <img src="/dashboard-project/icons/account.svg" alt="Profile" />
             <p><strong>Profile</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/message.svg" alt="Messages" />
+            <img src="/dashboard-project/icons/message.svg" alt="Messages" />
             <p><strong>Messages</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/clock-time-three.svg" alt="History" />
+            <img src="/dashboard-project/icons/clock-time-three.svg" alt="History" />
             <p><strong>History</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/file-multiple.svg" alt="Tasks" />
+            <img src="/dashboard-project/icons/file-multiple.svg" alt="Tasks" />
             <p><strong>Tasks</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/account-group.svg" alt="Communities" />
+            <img src="/dashboard-project/icons/account-group.svg" alt="Communities" />
             <p><strong>Communities</strong></p>
           </div>
         </div>
         <div class="list-items-bottom">
           <div class="icon-text">
-            <img src="/icons/cog.svg" alt="Settings" />
+            <img src="/dashboard-project/icons/cog.svg" alt="Settings" />
             <p><strong>Settings</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/help-box.svg" alt="Support" />
+            <img src="/dashboard-project/icons/help-box.svg" alt="Support" />
             <p><strong>Support</strong></p>
           </div>
           <div class="icon-text">
-            <img src="/icons/shield-check.svg" alt="Privacy" />
+            <img src="/dashboard-project/icons/shield-check.svg" alt="Privacy" />
             <p><strong>Privacy</strong></p>
           </div>
         </div>
@@ -57,11 +57,11 @@
       <div class="main">
         <div class="header">
           <div class="navbar">
-            <img src="/icons/magnify.svg" alt="" />
+            <img src="/dashboard-project/icons/magnify.svg" alt="" />
             <input type="text" class="form-input" />
-            <img src="/icons/bell-ring.svg" alt="" />
+            <img src="/dashboard-project/icons/bell-ring.svg" alt="" />
             <img
-              src="/images/profile-ava.jpg"
+              src="/dashboard-project/images/profile-ava.jpg"
               alt="Profile Picture"
               width="50px"
               class="avatarProfile"
@@ -71,7 +71,7 @@
           <div class="welcome">
             <div class="left">
               <img
-                src="/images/profile-ava.jpg"
+                src="/dashboard-project/images/profile-ava.jpg"
                 alt="Profile Picture"
                 width="65px"
                 class="avatarProfile"
@@ -98,15 +98,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -116,15 +116,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -134,15 +134,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -154,15 +154,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -172,15 +172,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -190,15 +190,15 @@
                   <p>Lores Imsum</p>
                   <div class="card-icons">
                     <img
-                      src="/icons/star-plus-outline.svg"
+                      src="/dashboard-project/icons/star-plus-outline.svg"
                       alt="Star-icon"
                     />
                     <img
-                      src="/icons/eye-plus-outline.svg"
+                      src="/dashboard-project/icons/eye-plus-outline.svg"
                       alt="Eyes-icon"
                     />
                     <img
-                      src="/icons/share-variant-outline.svg"
+                      src="/dashboard-project/icons/share-variant-outline.svg"
                       alt="Share-icon"
                     />
                   </div>
@@ -242,28 +242,28 @@
               <h4>Trending</h4>
               <div class="trend-card">
                 <div class="trend-image-text">
-                  <img src="/images/avatar1.png" alt="avatar1" />
+                  <img src="/dashboard-project/images/avatar1.png" alt="avatar1" />
                   <div class="trend-text">
                     <h6>@tegan</h6>
                     <p>World Peace Builder</p>
                   </div>
                 </div>
                 <div class="trend-image-text">
-                  <img src="/images/avatar2.png" alt="avatar2" />
+                  <img src="/dashboard-project/images/avatar2.png" alt="avatar2" />
                   <div class="trend-text">
                     <h6>@morgan</h6>
                     <p>Super Cool Project</p>
                   </div>
                 </div>
                 <div class="trend-image-text">
-                  <img src="/images/avatar3.png" alt="avatar3" />
+                  <img src="/dashboard-project/images/avatar3.png" alt="avatar3" />
                   <div class="trend-text">
                     <h6>@kendall</h6>
                     <p>Life Changing App</p>
                   </div>
                 </div>
                 <div class="trend-image-text">
-                  <img src="/images/avatar4.png" alt="avatar4" />
+                  <img src="/dashboard-project/images/avatar4.png" alt="avatar4" />
                   <div class="trend-text">
                     <h6>@alex</h6>
                     <p>No Traffic Maker</p>
