add projects display section

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -9,30 +9,40 @@
     <div class="grid">
       <div class="sidebar">
         <div class="list-items">
-            <div class="icon-text">
-                <img src="../image/list-box-outline.svg" alt="Todo list">
-                <h1>Todo List</h1>
-            </div>
-            <div class="icon-text">
-                <img src="../image/plus-circle-outline.svg" alt="Add task">
-                <h1>Add task</h1>
-            </div>
-            <div class="icon-text">
-                <img src="../image/calendar-date-svgrepo-com (1).svg" alt="Today">
-                <h1>Today</h1>
-            </div>
-            <div class="icon-text">
-                <img src="../image/calendar-month-outline.svg" alt="Upcoming">
-                <h1>Upcoming</h1>
-                </div>
-            <div class="icon-text">
-                <img src="../image/calendar-check.svg" alt="Complete">
-                <h1>Complete</h1>
-            </div>
-            <div class="icon-text">
-                <img src="../image/file-document-alert-outline.svg" alt="Overdued">
-                <h1>Overdued</h1>
-            </div>
+          <div class="icon-text">
+            <img src="../image/list-box-outline.svg" alt="Todo list" />
+            <h1>Todo List</h1>
+          </div>
+          <div class="icon-text">
+            <img src="../image/plus-circle-outline.svg" alt="Add task" />
+            <h1>Add task</h1>
+          </div>
+          <div class="icon-text">
+            <img src="../image/calendar-date-svgrepo-com (1).svg" alt="Today" />
+            <h1>Today</h1>
+          </div>
+          <div class="icon-text">
+            <img src="../image/calendar-month-outline.svg" alt="Upcoming" />
+            <h1>Upcoming</h1>
+          </div>
+          <div class="icon-text">
+            <img src="../image/calendar-check.svg" alt="Complete" />
+            <h1>Complete</h1>
+          </div>
+          <div class="icon-text">
+            <img
+              src="../image/file-document-alert-outline.svg"
+              alt="Overdued"
+            />
+            <h1>Overdued</h1>
+          </div>
+        </div>
+        <div class="projects">
+          <p>My projects</p>
+          <div class="projects-icons">
+            <img src="../image/plus.svg" alt="Add project" />
+            <img src="../image/chevron-down.svg" alt="View project" />
+          </div>
         </div>
       </div>
       <div class="content">
