complete the view and hide project part when clicked

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -37,24 +37,29 @@
             <h1>Overdued</h1>
           </div>
         </div>
-        <div class="projects">
+        <div class="projects-headers">
           <p>My projects</p>
           <div class="projects-icons">
-            <img src="../image/plus.svg" alt="Add project" id="add-project" />
-            <img src="../image/chevron-down.svg" alt="View project" id="view-project"/>
+            <img src="../image/plus.svg" alt="Add project" id="add-project-btn" />
+            <img
+              src="../image/chevron-down.svg"
+              alt="View project"
+              id="view-project-btn"
+            />
           </div>
         </div>
+        <div class="view-projects"></div>
       </div>
       <div class="content">
         <h1>My Todo App</h1>
-        <div class="add-project-box" style="display: none;">
+        <div class="add-project-box" style="display: none">
           <h2>Create your new project here</h2>
-          <form class="add-project-form" >
+          <form class="add-project-form">
             <div class="project-name-input">
               <label for="project-name">Project Name:</label>
               <input
                 type="text"
-                id="create-project-input"
+                id="project-name-input"
                 placeholder="E.x: Summer workout"
               />
             </div>
