--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -40,7 +40,11 @@
         <div class="projects-headers">
           <p>My projects</p>
           <div class="projects-icons">
-            <img src="../image/plus.svg" alt="Add project" id="add-project-btn" />
+            <img
+              src="../image/plus.svg"
+              alt="Add project"
+              id="add-project-btn"
+            />
             <img
               src="../image/chevron-down.svg"
               alt="View project"
@@ -52,20 +56,42 @@
       </div>
       <div class="content">
         <h1>My Todo App</h1>
+        <!-- Create add project form -->
         <div class="add-project-box" style="display: none">
           <h2>Create your new project here</h2>
           <form class="add-project-form">
-            <div class="project-name-input">
+           
               <label for="project-name">Project Name:</label>
               <input
                 type="text"
                 id="project-name-input"
                 placeholder="E.x: Summer workout"
               />
+
+            <div class="project-form-btn">
+              <button type="submit" class="project-submit-btn">Create</button>
+              <button class="project-cancel-btn">Cancel</button>
             </div>
-            <div class="form-btn">
-              <button type="submit" class="submit-btn">Create</button>
-              <button class="cancel-btn">Cancel</button>
+          </form>
+        </div>
+
+        <!-- Create add task form -->
+        <div class="add-task-box" style="display: block">
+          <h2>Create your new task</h2>
+          <form class="add-task-form">
+            <label for="task-name">Title:</label>
+            <input type="text" id="task-name" placeholder="E.g: Warm up" />
+            <label for="task-name">Descriptions:</label>
+            <input type="text" id="descriptions" />
+            <label for="task-name">Due date:</label>
+            <input type="text" id="due-date" />
+            <label for="task-name">Project:</label>
+            <input type="text" id="project" />
+            <label for="task-name">Priority:</label>
+            <input type="text" id="priority" />
+            <div class="task-form-btn">
+              <button type="submit" class="task-submit-btn">Create</button>
+              <button class="task-cancel-btn">Cancel</button>
             </div>
           </form>
         </div>
