complete task form

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -88,7 +88,11 @@
             <label for="task-project">Project:</label>
             <select id="task-project"></select>
             <label for="task-priority">Priority:</label>
-            <select id="task-priority"></select>
+            <select id="task-priority">
+              <option class="option-select" value="Low" style="color: lightblue">Low</option>
+              <option class="option-select" value="Medium" style="color: lightsalmon">Medium</option>
+              <option class="option-select " value="High" style="color: red" selected>High</option>
+            </select>
             <div class="task-form-btn">
               <button type="submit" class="task-submit-btn">Create</button>
               <button class="task-cancel-btn">Cancel</button>
