create del and edit button for project container

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -52,7 +52,7 @@
             />
           </div>
         </div>
-        <div class="view-projects"></div>
+        <div class="projects-container"></div>
       </div>
       <div class="content">
         <h1>My Todo App</h1>
@@ -70,7 +70,7 @@
               />
 
             <div class="project-form-btn">
-              <button type="submit" class="project-submit-btn">Create</button>
+              <button type="button" class="project-submit-btn">Create</button>
               <button type="button" class="project-cancel-btn">Cancel</button>
             </div>
           </form>
