updated del and edit button of task form

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -95,7 +95,7 @@
               <option class="option-select " value="High" style="color: red" selected>High</option>
             </select>
             <div class="task-form-btn">
-              <button type="submit" class="task-submit-btn">Create</button>
+              <button type="button" class="task-submit-btn">Create</button>
               <button class="task-cancel-btn">Cancel</button>
             </div>
           </form>
