--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -9,7 +9,7 @@
     <div class="grid">
       <div class="sidebar">
         <div class="list-items">
-          <div class="icon-text">
+          <div class="icon-text" id="all-task">
             <img src="../image/list-box-outline.svg" alt="Todo list" />
             <h1>Todo List</h1>
           </div>
