updating date comparison

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -100,8 +100,12 @@
             </div>
           </form>
         </div>
-
-        <div class="todo-list"></div>
+        <div class="tab-container">
+          <div class="todo-list"></div>
+          <div class="today-task-list"></div>
+          <div class="upcoming-task-list"></div>
+          <div class="overdued-task-list"></div>
+        </div>
       </div>
     </div>
   </body>
