add the completed list

--- a/todo-list/src/index.html
+++ b/todo-list/src/index.html
@@ -85,7 +85,7 @@
             <label for="task-descriptions">Descriptions:</label>
             <textarea name="Descriptions" id="task-descriptions"></textarea>
             <label for="task-due-date">Due date:</label>
-            <input type="date" id="task-due-date" />
+            <input type="date" id="task-due-date" required/>
             <label for="task-project">Project:</label>
             <select id="task-project"></select>
             <label for="task-priority">Priority:</label>
@@ -105,7 +105,7 @@
           <div class="today-task-list"></div>
           <div class="upcoming-task-list"></div>
           <div class="overdued-task-list"></div>
-
+          <div class="completed-task-list"></div>
       </div>
     </div>
   </body>
