use another solution

--- a/todo-list/src/index2.html
+++ b/todo-list/src/index2.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-  <script defer src="main.js"></script></head>
+  </head>
   <body>
     <div class="grid">
       <div class="sidebar">
         <div class="list-items">
           <div class="icon-text" id="all-task">
-            <img src="69cb22568c04ac01ac23.svg" alt="Todo list" />
+            <img src="../image/list-box-outline.svg" alt="Todo list" />
             <h1>Todo List</h1>
           </div>
           <div class="icon-text" id="today-task">
-            <img src="84da0e725012ffb5e9b5.svg" alt="Today" />
+            <img src="../image/calendar-date-svgrepo-com (1).svg" alt="Today" />
             <h1>Today</h1>
           </div>
           <div class="icon-text" id="upcoming-task">
-            <img src="18f552623324e58156e6.svg" alt="Upcoming" />
+            <img src="../image/calendar-month-outline.svg" alt="Upcoming" />
             <h1>Upcoming</h1>
           </div>
           <div class="icon-text" id="completed-task">
-            <img src="7627dfa4976d51ee938e.svg" alt="Completed" />
+            <img src="../image/calendar-check.svg" alt="Completed" />
             <h1>Completed</h1>
           </div>
           <div class="icon-text" id="overdued-task">
             <img
-              src="82551d8ca1de7346bc95.svg"
+              src="../image/file-document-alert-outline.svg"
               alt="Overdued"
             />
             <h1>Overdued</h1>
@@ -37,12 +37,12 @@
           <p>My projects</p>
           <div class="projects-icons">
             <img
-              src="3cffe9a515498593b872.svg"
+              src="../image/plus.svg"
               alt="Add project"
               id="add-project-btn"
             />
             <img
-              src="da1d4548b671a011dfa4.svg"
+              src="../image/chevron-down.svg"
               alt="View project"
               id="view-project-btn"
             />
