update the task form

--- a/todo-list/src/index2.html
+++ b/todo-list/src/index2.html
@@ -13,6 +13,10 @@
             <img src="../image/list-box-outline.svg" alt="Todo list" />
             <h1>Todo List</h1>
           </div>
+          <div class="icon-text" id="add-task">
+            <img src="../image/plus-circle-outline.svg" alt="Add task" />
+            <h1>Add task</h1>
+          </div>
           <div class="icon-text" id="today-task">
             <img src="../image/calendar-date-svgrepo-com (1).svg" alt="Today" />
             <h1>Today</h1>
