--- a/weather-app/weather.html
+++ b/weather-app/weather.html
@@ -22,7 +22,7 @@
         <h1></h1>
         <h3></h3>
         <div class="weather">
-          <img src="./image/rain.png" class="weather-icon" />
+          <img src="./image/rain.png" class="weather-icons" />
           <div class="text-detail">
             <h1 class="temp">22°C</h1>
             <h2 class="city">Ho Chi Minh</h2>
