updated features and check response status

--- a/weather-app/weather.html
+++ b/weather-app/weather.html
@@ -17,6 +17,7 @@
           <img src="./image/magnify.svg" />
         </button>
       </div>
+      <div class="error-message">Invalid city name!</div>
       <div class="card-text">
         <img src="" />
         <h1></h1>
