addShip and drop ship features complete

--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -15,11 +15,11 @@
     <div class="game-container"></div>
 
     <div class="ship-options-container">
-        <div class="ship1-preview ship1"></div>
-        <div class="ship2-preview ship2"></div>
-        <div class="ship3-preview ship3"></div>
-        <div class="ship4-preview ship4"></div>
-        <div class="ship5-preview ship5"></div>
+        <div id="0" class="ship1-preview ship1" draggable="true"></div>
+        <div id="1" class="ship2-preview ship2" draggable="true"></div>
+        <div id="2" class="ship3-preview ship3" draggable="true"></div>
+        <div id="3" class="ship4-preview ship4" draggable="true"></div>
+        <div id="4" class="ship5-preview ship5" draggable="true"></div>
     </div>
 
     <div class="btn-container">
