handle logic game, and turn

--- a/Battleship/index.html
+++ b/Battleship/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="game-info">
-        <p>Player turn:</p>
-        <p>Info:</p>
+        <p>Player turn: <span class="player-turn-info"></span></p>
+        <p >Info: <span class="display-info"></span></p>
     </div>
 
     <div class="game-container"></div>
